kreiranje i pozivanjr env varibale

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,6 +2,11 @@ FROM python:3.9.2-slim-buster
 
 ENV USERSERVICE_HOST: ${USERSERVICE_HOST_WEBAPP}
 ENV USERSERVICE_PORT: ${USERSERVICE_PORT_WEBAPP}
+ENV DB_DATABASE: ${KEYCLOAK_POSTGRESQL_DB}
+ENV DB_USER: ${KEYCLOAK_POSTGRESQL_USER}
+ENV DB_PASSWORD: ${KEYCLOAK_POSTGRESQL_PASS}
+ENV KEYCLOAK_USER: ${KEYCLOAK_USER}
+ENV KEYCLOAK_PASSWORD: ${KEYCLOAK_PASS}
 
 ADD ./requirements.txt /app/
 
