--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -15,6 +15,11 @@ services:
     environment:
       USERSERVICE_HOST: ${USERSERVICE_HOST_WEBAPP}
       USERSERVICE_PORT: ${USERSERVICE_PORT_WEBAPP}
+      DB_DATABASE: ${KEYCLOAK_POSTGRESQL_DB}
+      DB_USER: ${KEYCLOAK_POSTGRESQL_USER}
+      DB_PASSWORD: ${KEYCLOAK_POSTGRESQL_PASS}
+      KEYCLOAK_USER: ${KEYCLOAK_USER}
+      KEYCLOAK_PASSWORD: ${KEYCLOAK_PASS}
     ports:
       - 8081:8080
     networks:
