dodate env variable za skrivanje osetljivih informacija

--- a/auth/docker-compose.yaml
+++ b/auth/docker-compose.yaml
@@ -20,6 +20,12 @@ services:
       DB_PASSWORD: ${KEYCLOAK_POSTGRESQL_PASS}
       KEYCLOAK_USER: ${KEYCLOAK_USER}
       KEYCLOAK_PASSWORD: ${KEYCLOAK_PASS}
+
+      EMAIL_RECOVERY_USERNAME_AUTH: ${EMAIL_RECOVERY_USERNAME_AUTH}
+      EMAIL_RECOVERY_PASSWORD_AUTH: ${EMAIL_RECOVERY_PASSWORD_AUTH}
+      EMAIL_RECOVERY_HOST_AUTH: ${EMAIL_RECOVERY_HOST_AUTH}
+      EMAIL_RECOVERY_PORT_AUTH: ${EMAIL_RECOVERY_PORT_AUTH}
+
     ports:
       - 8083:8080
     networks:
