pozivanje env variabli u docker file koje ce se ukljuciti kada se digne docker container

--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -2,11 +2,17 @@ FROM python:3.9.2-slim-buster
 
 ENV USERSERVICE_HOST: ${USERSERVICE_HOST_WEBAPP}
 ENV USERSERVICE_PORT: ${USERSERVICE_PORT_WEBAPP}
+
 ENV DB_DATABASE: ${KEYCLOAK_POSTGRESQL_DB}
 ENV DB_USER: ${KEYCLOAK_POSTGRESQL_USER}
 ENV DB_PASSWORD: ${KEYCLOAK_POSTGRESQL_PASS}
 ENV KEYCLOAK_USER: ${KEYCLOAK_USER}
 ENV KEYCLOAK_PASSWORD: ${KEYCLOAK_PASS}
+
+ENV EMAIL_RECOVERY_USERNAME_AUTH: ${EMAIL_RECOVERY_USERNAME_AUTH}
+ENV EMAIL_RECOVERY_PASSWORD_AUTH: ${EMAIL_RECOVERY_PASSWORD_AUTH}
+ENV EMAIL_RECOVERY_HOST_AUTH: ${EMAIL_RECOVERY_HOST_AUTH}
+ENV EMAIL_RECOVERY_PORT_AUTH: ${EMAIL_RECOVERY_PORT_AUTH}
 
 ADD ./requirements.txt /app/
 
