pozivanje env variabli za skrivanje informacija i lakse updejtovanje na server side

--- a/auth/docker-compose.yaml
+++ b/auth/docker-compose.yaml
@@ -20,6 +20,10 @@ services:
       DB_PASSWORD: ${KEYCLOAK_POSTGRESQL_PASS}
       KEYCLOAK_USER: ${KEYCLOAK_USER}
       KEYCLOAK_PASSWORD: ${KEYCLOAK_PASS}
+      KEYCLOAK_HOST: ${KEYCLOAK_HOST}
+      KEYCLOAK_PORT: ${KEYCLOAK_PORT}
+      KEYCLOAK_CLIENT_SECRET_KEY: ${CLIENT_SECRET_KEY}
+      KEYCLOAK_CLIENT_ID: ${CLIENT_ID}
 
       EMAIL_RECOVERY_USERNAME_AUTH: ${EMAIL_RECOVERY_USERNAME_AUTH}
       EMAIL_RECOVERY_PASSWORD_AUTH: ${EMAIL_RECOVERY_PASSWORD_AUTH}
