--- a/api/docker-compose.yaml
+++ b/api/docker-compose.yaml
@@ -20,6 +20,10 @@ services:
       DB_PASSWORD: ${KEYCLOAK_POSTGRESQL_PASS}
       KEYCLOAK_USER: ${KEYCLOAK_USER}
       KEYCLOAK_PASSWORD: ${KEYCLOAK_PASS}
+      KEYCLOAK_HOST: ${KEYCLOAK_HOST}
+      KEYCLOAK_PORT: ${KEYCLOAK_PORT}
+      KEYCLOAK_CLIENT_SECRET_KEY: ${CLIENT_SECRET_KEY}
+      KEYCLOAK_CLIENT_ID: ${CLIENT_ID}
     ports:
       - 8081:8080
     networks:
