--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -7,6 +7,10 @@ ENV DB_USER: ${KEYCLOAK_POSTGRESQL_USER}
 ENV DB_PASSWORD: ${KEYCLOAK_POSTGRESQL_PASS}
 ENV KEYCLOAK_USER: ${KEYCLOAK_USER}
 ENV KEYCLOAK_PASSWORD: ${KEYCLOAK_PASS}
+ENV KEYCLOAK_HOST: ${KEYCLOAK_HOST}
+ENV KEYCLOAK_PORT: ${KEYCLOAK_PORT}
+ENV KEYCLOAK_CLIENT_SECRET_KEY: ${CLIENT_SECRET_KEY}
+ENV KEYCLOAK_CLIENT_ID: ${CLIENT_ID}
 
 ADD ./requirements.txt /app/
 
