--- a/templates/Dockerfile
+++ b/templates/Dockerfile
@@ -1,9 +1,9 @@
 FROM nginx:1.15.8-alpine
 #config
-copy ./nginx.conf /etc/nginx/nginx.conf
+COPY ./nginx.conf /etc/nginx/nginx.conf
 #content , comment out the ones you dont need !
-copy ./*.html /usr/share/nginx/html/
-copy ./css/*.css /usr/share/nginx/html/
-copy ./css/images/*.png /usr/share/nginx/html/
-copy ./css/images/*.jpg /usr/share/nginx/html/
-copy ./scripts/*.js /usr/share/nginx/html/
+COPY ./*.html /usr/share/nginx/html/
+COPY ./css/*.css /usr/share/nginx/html/
+COPY ./css/images/*.png /usr/share/nginx/html/
+COPY ./css/images/*.jpg /usr/share/nginx/html/
+COPY ./scripts/*.js /usr/share/nginx/html/
