--- a/templates/Dockerfile
+++ b/templates/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx:1.15.8-alpine
 #config
-# COPY ./nginx.conf /etc/nginx/nginx.conf
+COPY ./nginx.conf /etc/nginx/nginx.conf
 #content , comment out the ones you dont need !
 COPY ./*.html /usr/share/nginx/html/
 COPY ./css/*.css /usr/share/nginx/html/
