--- a/templates/docker-compose.yaml
+++ b/templates/docker-compose.yaml
@@ -10,6 +10,9 @@ services:
     build:
       context: ./
     image: our-server
+    environment:
+    
+      POSTGRES_DB: ${POSTGRES_DB_WEBAPP}
     ports:
       - 8080:80
     networks:
