--- a/userProfile/docker-compose.yaml
+++ b/userProfile/docker-compose.yaml
@@ -15,6 +15,9 @@ services:
     environment:
       USERSERVICE_HOST: ${USERSERVICE_HOST_WEBAPP}
       USERSERVICE_PORT: ${USERSERVICE_PORT_WEBAPP}
+      CLOUDINARY_CLOUD_NAME: ${CLOUDINARY_CLOUD_NAME}
+      CLOUDINARY_API_KEY: ${CLOUDINARY_API_KEY}
+      CLOUDINARY_API_SECRET: ${CLOUDINARY_API_SECRET}
     ports:
       - 8085:8080
     networks:
