dodata dokumentacija env variabli

--- a/userservice/Dockerfile
+++ b/userservice/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.10-slim-buster
 
-ENV POSTGRES_DB: ${POSTGRES_DB_WEBAPP}
-ENV POSTGRES_USER: ${POSTGRES_USER_WEBAPP}
-ENV POSTGRES_PASSWORD: ${USER_SERVICE_DB_PASSWORD_WEBAPP}
-ENV POSTGRES_HOST: ${POSTGRES_HOST_WEBAPP}
+ENV POSTGRES_DB: ${POSTGRES_DB_WEBAPP} # ime baze
+ENV POSTGRES_USER: ${POSTGRES_USER_WEBAPP}  # ime korisnika baze
+ENV POSTGRES_PASSWORD: ${USER_SERVICE_DB_PASSWORD_WEBAPP}   # sifra baze
+ENV POSTGRES_HOST: ${POSTGRES_HOST_WEBAPP}  # ime kontenjera ili localhost
 
 ADD ./requirements.txt /app/
 
