kreirana nova env variabla za keycloak secret

--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -11,6 +11,7 @@ ENV KEYCLOAK_PASSWORD: ${KEYCLOAK_PASS}
 ENV KEYCLOAK_HOST: ${KEYCLOAK_HOST}
 ENV KEYCLOAK_PORT: ${KEYCLOAK_PORT}
 ENV KEYCLOAK_CLIENT_SECRET_KEY: ${CLIENT_SECRET_KEY}
+ENV KEYCLOAK_CLIENT_SECRET_KEY_REALM_DEMO: ${CLIENT_SECRET_KEY_REALM_DEMO}
 ENV KEYCLOAK_CLIENT_ID: ${CLIENT_ID}
 
 ENV EMAIL_RECOVERY_USERNAME_AUTH: ${EMAIL_RECOVERY_USERNAME_AUTH}
