--- a/auth/docker-compose.yaml
+++ b/auth/docker-compose.yaml
@@ -23,6 +23,7 @@ services:
       KEYCLOAK_HOST: ${KEYCLOAK_HOST}
       KEYCLOAK_PORT: ${KEYCLOAK_PORT}
       KEYCLOAK_CLIENT_SECRET_KEY: ${CLIENT_SECRET_KEY}
+      KEYCLOAK_CLIENT_SECRET_KEY_REALM_DEMO: ${CLIENT_SECRET_KEY_REALM_DEMO}
       KEYCLOAK_CLIENT_ID: ${CLIENT_ID}
 
       EMAIL_RECOVERY_USERNAME_AUTH: ${EMAIL_RECOVERY_USERNAME_AUTH}
